--- a/bakerydemo/templates/base.html
+++ b/bakerydemo/templates/base.html
@@ -1,4 +1,4 @@
-{% load navigation_tags static wagtailuserbar %}
+{% load navigation_tags static wagtailuserbar django_vite %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -23,9 +23,8 @@
             <base target="_blank">
         {% endif %}
 
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/font-marcellus.css' %}">
-        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        {% vite_hmr_client %}
+        {% vite_asset "frontend/src/application/app.js" %}
     </head>
 
     <body class="{% block body_class %}template-{{ self.get_verbose_name|slugify }}{% endblock %}">
@@ -53,7 +52,5 @@
         <hr>
 
         {% include "includes/footer.html" %}
-
-        <script type="module" src="{% static 'js/main.js' %}"></script>
     </body>
 </html>
