--- a/bakerydemo/templates/base.html
+++ b/bakerydemo/templates/base.html
@@ -1,4 +1,4 @@
-{% load navigation_tags static wagtailuserbar django_vite %}
+{% load navigation_tags static wagtailuserbar %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -23,8 +23,9 @@
             <base target="_blank">
         {% endif %}
 
-        {% vite_hmr_client %}
-        {% vite_asset "frontend/src/application/app.js" %}
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/font-marcellus.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
     </head>
 
     <body class="{% block body_class %}template-{{ self.get_verbose_name|slugify }}{% endblock %}">
